# Modulus

./: 00_PACKAGE_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  Info.plist  Modulus.slnx  ModulusController.cpp  ModulusLite.cpp  QUICK_REFERENCE.md  README.md  Run_Modulus.scr  build.sh  cad_adapter.cpp  cad_adapter.h  core.h  plugin_main.cpp  ui_panel.cpp  ui_panel.h
CADAdapter/: CADAdapter.cpp  CADAdapter.h
Core/: AStarRouter.cpp  AStarRouter.h  FDGLayout.cpp  FDGLayout.h  Models.h  PipeProperties.h
Modulus/: Importfile.cs  Main.cs  Modulus.csproj  Sample_Manifest.Json
Modulus/Phase1/: Models.cs  Parse.cs  Sort.cs
Modulus/Phase2/: 3D.cs  Bipartition.cs  Collision.cs  FDG.cs  Models.cs
UI/: ModulusPanel.cpp  ModulusPanel.h
src/: main.cpp
tests/: test_core.cpp  test_routing.cpp
